# Probing-Learned-Feedback-Patterns

./: .gitignore  .pylintrc  README.md  model_pipeline.py  pyproject.toml  requirements.txt  setup.py
Notebooks/: ablation_study.ipynb  autoencoder_training.ipynb  autointerp_and_classify.ipynb  autointerp_and_score.ipynb  baseline_linear_probe.ipynb  collection_linear_probe_data.ipynb  collection_logistic_probe_data.ipynb  train_linear_probe.ipynb  train_logistic_regression.ipynb
Notebooks/dataset_building/: Contrastive_Triples.ipynb  build_triples_dataset.ipynb
Notebooks/model_building/: train_hlhh_dataset.ipynb  train_hlhh_dataset.py  train_safe_rlhf_dataset.ipynb  train_unaligned_dataset.ipynb  train_unaligned_dataset.py
autoencoder_training/: .env  experiment.py  experiment_configs.py  network_helper_functions.py  requirements.txt  training.py
autoencoder_training/metrics/: mmcs.py
autoencoder_training/models/: sparse_autoencoder.py
autoencoder_training/scripts/: experiment.sh
autoencoder_training/utils/: gpu_utils.py  helper_functions.py  model_storage_utils.py
configs/: project_configs.py  rlhf_training_config.py  rlhf_training_configs.py
internal_representations/: irm.md
reward_analyzer/: __init__.py
reward_analyzer/configs/: project_configs.py  rlhf_training_config.py  task_configs.py
reward_functions/: reward_class.py  transformer_utils.py
rlhf_model_training/: reward_class.py  rlhf_model_pipeline.py  train_pythia.py
scripts/: setup_environment.sh
sparse_codes_training/: requirements.txt
utils/: transformer_utils.py
(+50 files in other folders)
