[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "reward_analyzer"
version = "0.9.0"
description = "Analyze internal reward models using sparse autoencoders."
authors = ["Apart Research <amirabdullah19852020@gmail.com>"]
license = "MIT"
homepage = "https://github.com/apartresearch/Interpreting-Reward-Models"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"